[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/Bosses/Planos/Planos_body.gd" type="Script" id=1]
[ext_resource path="res://Assets/Bosses/Planos/Asset 13.png" type="Texture" id=2]
[ext_resource path="res://Assets/Bosses/Planos/Asset 21.png" type="Texture" id=3]
[ext_resource path="res://Assets/Bosses/Planos/Asset 14.png" type="Texture" id=4]
[ext_resource path="res://Assets/Bosses/Planos/Asset 15.png" type="Texture" id=5]
[ext_resource path="res://Assets/Bosses/Planos/Asset 18.png" type="Texture" id=6]
[ext_resource path="res://Assets/Bosses/Planos/Asset 17.png" type="Texture" id=7]
[ext_resource path="res://Assets/Bosses/Planos/Asset 19.png" type="Texture" id=8]
[ext_resource path="res://Assets/Bosses/Planos/Asset 20.png" type="Texture" id=9]
[ext_resource path="res://Assets/Bosses/Planos/Asset 16.png" type="Texture" id=10]
[ext_resource path="res://Assets/Bosses/Planos/Asset 24planos_portal.png" type="Texture" id=11]
[ext_resource path="res://Assets/Bosses/Planos/Asset 23planos_portal.png" type="Texture" id=12]
[ext_resource path="res://Sounds/Level_1/Music/z_shoot_bulet.wav" type="AudioStream" id=13]
[ext_resource path="res://Sounds/Level_1/Music/z_portal.ogg" type="AudioStream" id=14]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 63.4888, 109.068 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 17.5339, 28.5416 )

[sub_resource type="Animation" id=3]

resource_name = "Blast_moon"
length = 5.25
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Planos_gauntlet:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 5, 5.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 27.0, 27.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Planos_gauntlet:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 5, 5.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -131.135, -12.2176 ), Vector2( -7.13501, -95.2176 ), Vector2( -131.135, -12.2176 ), Vector2( -131.135, -12.2176 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3, 5.25 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "blast_moon_middle"
}, {
"args": [  ],
"method": "blast_moon_finished"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Planos_gauntlet:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 5, 5.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 5.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "Default"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Planos_gauntlet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -131.135, -12.2176 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Planos_gauntlet:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Planos_gauntlet:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Planos_hand:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 103.635, 48.1161 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Planos_hand:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Planos_hand:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprite:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sprite:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Portal_black_part:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Portal_black_part:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Portal_black_part:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Portal_blue_part:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Portal_blue_part:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Portal_blue_part:scale")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "Shoot_projectile"
length = 1.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Planos_gauntlet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -128.433, 0 ), Vector2( -127.495, 0 ), Vector2( -142.495, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Planos_gauntlet:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -90.0, -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Planos_gauntlet:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_projectile"
} ]
}

[sub_resource type="Animation" id=6]

resource_name = "Summon_side_pillars"
length = 5.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Planos_gauntlet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -128.433, 0 ), Vector2( -142.065, -13.6324 ), Vector2( -128.433, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Planos_gauntlet:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -90.0, -45.0, -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Planos_gauntlet:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "summon_side_pillars_middle"
} ]
}

[sub_resource type="Animation" id=7]

resource_name = "Teleport"
length = 6.0
loop = false
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-005, 1e-005 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Planos_hand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 103.635, 48.1161 ), Vector2( 103.635, 48.1161 ), Vector2( -5.365, 12.1161 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Planos_hand:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-005, 1e-005 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Planos_gauntlet:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 3, 3.5, 4, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -131.135, -12.2176 ), Vector2( -131.135, -56.2176 ), Vector2( -131.135, -56.2176 ), Vector2( -131.135, -12.2176 ), Vector2( -131.135, -56.2176 ), Vector2( -16.135, 9.7824 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Planos_gauntlet:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 4, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-005, 1e-005 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Portal_black_part:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1, 5.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Portal_black_part:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1, 5.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-005, 1e-005 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Portal_blue_part:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1, 1.5, 3, 4, 5.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Portal_blue_part:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 3, 4, 4.5, 5.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ), Vector2( 1, 1 ), Vector2( 0.85, 0.85 ), Vector2( 1, 1 ), Vector2( 0.85, 0.85 ), Vector2( 1.1, 1.1 ), Vector2( 0.85, 0.85 ), Vector2( 1, 1 ), Vector2( 1e-005, 1e-005 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Planos_gauntlet:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 5.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Portal_blue_part:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 3, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/12/type = "method"
tracks/12/path = NodePath(".")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=8]

length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Planos_gauntlet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 1.1, 1.6, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -131.135, -12.2176 ), Vector2( -131.135, -40.2176 ), Vector2( -131.135, -40.2176 ), Vector2( -131.135, -40.2176 ), Vector2( -131.135, -40.2176 ), Vector2( -131.135, -40.2176 ), Vector2( -131.135, -12.2176 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Planos_gauntlet:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 1.1, 1.6, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "use_gauntlet_finished"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Planos_gauntlet:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 1.1, 1.6, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 25.124, 42.1404 )

[sub_resource type="Animation" id=10]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]

length = 0.5
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.863281, 0.134888, 0.134888, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hit_flash_finished"
} ]
}

[node name="Planos" type="Node2D"]

position = Vector2( 958.94, 400.7 )

[node name="Planos_body" type="KinematicBody2D" parent="." index="0"]

position = Vector2( 1, 0 )
input_pickable = false
collision_layer = 4
collision_mask = 18
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Visibility" ]

[node name="Sprite" type="Sprite" parent="Planos_body" index="0"]

scale = Vector2( 1e-005, 1e-005 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planos_body" index="1"]

position = Vector2( 0, 5 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Planos_hand" type="Area2D" parent="Planos_body" index="2"]

editor/display_folded = true
position = Vector2( -5.365, 12.1161 )
scale = Vector2( 1e-005, 1e-005 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planos_body/Planos_hand" index="0"]

shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Planos_body/Planos_hand" index="1"]

texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Planos_body" index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.5
anims/Blast_moon = SubResource( 3 )
anims/Default = SubResource( 4 )
anims/Shoot_projectile = SubResource( 5 )
anims/Summon_side_pillars = SubResource( 6 )
anims/Teleport = SubResource( 7 )
anims/Use_gauntlet = SubResource( 8 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Planos_gauntlet" type="Area2D" parent="Planos_body" index="4"]

editor/display_folded = true
position = Vector2( -16.135, 9.7824 )
scale = Vector2( 1e-005, 1e-005 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planos_body/Planos_gauntlet" index="0"]

shape = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="Planos_body/Planos_gauntlet" index="1"]

texture = ExtResource( 4 )

[node name="red_pebble" type="Sprite" parent="Planos_body/Planos_gauntlet" index="2"]

position = Vector2( -23.8832, -23.2197 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="violet_pebble" type="Sprite" parent="Planos_body/Planos_gauntlet" index="3"]

position = Vector2( -12.6051, -23.2197 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="blue_pebble" type="Sprite" parent="Planos_body/Planos_gauntlet" index="4"]

position = Vector2( -1.32703, -23.2197 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="orange_pebble" type="Sprite" parent="Planos_body/Planos_gauntlet" index="5"]

position = Vector2( 21.8927, -23.2197 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="green_pebble" type="Sprite" parent="Planos_body/Planos_gauntlet" index="6"]

position = Vector2( -5.97095, -7.29761 )
texture = ExtResource( 9 )

[node name="yellow_pebble" type="Sprite" parent="Planos_body/Planos_gauntlet" index="7"]

position = Vector2( 10.6147, -23.2197 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer_hit_flash" type="AnimationPlayer" parent="Planos_body" index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Default = SubResource( 10 )
anims/Hit_flash = SubResource( 11 )
blend_times = [  ]

[node name="Portal_black_part" type="Sprite" parent="Planos_body" index="6"]

scale = Vector2( 1e-005, 1e-005 )
z_index = -2
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]

[node name="Portal_blue_part" type="Sprite" parent="Planos_body" index="7"]

scale = Vector2( 1e-005, 1e-005 )
z_index = -1
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Timer_being_hit" type="Timer" parent="Planos_body" index="8"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Sounds" type="Node2D" parent="Planos_body" index="9"]

[node name="Audio_shoot_bullet" type="AudioStreamPlayer2D" parent="Planos_body/Sounds" index="0"]

stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Audio_portal" type="AudioStreamPlayer2D" parent="Planos_body/Sounds" index="1"]

stream = ExtResource( 14 )
volume_db = 10.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="timeout" from="Planos_body/Timer_being_hit" to="Planos_body" method="_on_Timer_being_hit_timeout"]


